// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toast > renders with actions correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" class="ToastViewport" data-expanded="true" data-slot="viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-reka-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="robotbas-toast-root row" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!-- <UAvatar v-if="avatar" :size="((props.ui?.avatarSize || ui.avatarSize()) as AvatarProps['size'])" v-bind="avatar"
        data-slot="avatar" :class="ui.avatar({ class: props.ui?.avatar })" /> -->
      <div class="col-2 text-center">
        <!--v-if-->
      </div>
      <div data-slot="wrapper" class="col-10 robotbas-toast-wrapper">
        <div data-slot="title" class="ToastTitle">Toast</div>
        <!--v-if-->
        <div data-slot="actions" class=""><button class="robotbas-button" data-reka-toast-announce-exclude="" data-reka-toast-announce-alt="Action" type="button" size="xs">
            <!--v-if-->Action
            <!--v-if-->
          </button></div>
      </div>
      <div data-slot="actions" class="">
        <!--v-if-->
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-0%) !important;"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`Toast > renders with as correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" class="ToastViewport" data-expanded="true" data-slot="viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <section data-reka-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="robotbas-toast-root row" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!-- <UAvatar v-if="avatar" :size="((props.ui?.avatarSize || ui.avatarSize()) as AvatarProps['size'])" v-bind="avatar"
        data-slot="avatar" :class="ui.avatar({ class: props.ui?.avatar })" /> -->
      <div class="col-2 text-center">
        <!--v-if-->
      </div>
      <div data-slot="wrapper" class="col-10 robotbas-toast-wrapper">
        <div data-slot="title" class="ToastTitle">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if-->
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-0%) !important;"></div>
        </div>
        <!--v-if-->
      </div>
    </section>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`Toast > renders with class correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" class="ToastViewport" data-expanded="true" data-slot="viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-reka-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="robotbas-toast-root row" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!-- <UAvatar v-if="avatar" :size="((props.ui?.avatarSize || ui.avatarSize()) as AvatarProps['size'])" v-bind="avatar"
        data-slot="avatar" :class="ui.avatar({ class: props.ui?.avatar })" /> -->
      <div class="col-2 text-center">
        <!--v-if-->
      </div>
      <div data-slot="wrapper" class="col-10 robotbas-toast-wrapper">
        <div data-slot="title" class="ToastTitle">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if-->
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-0%) !important;"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`Toast > renders with close slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" class="ToastViewport" data-expanded="true" data-slot="viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-reka-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="robotbas-toast-root row" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!-- <UAvatar v-if="avatar" :size="((props.ui?.avatarSize || ui.avatarSize()) as AvatarProps['size'])" v-bind="avatar"
        data-slot="avatar" :class="ui.avatar({ class: props.ui?.avatar })" /> -->
      <div class="col-2 text-center">
        <!--v-if-->
      </div>
      <div data-slot="wrapper" class="col-10 robotbas-toast-wrapper">
        <div data-slot="title" class="ToastTitle">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if-->Close slot
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-0%) !important;"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`Toast > renders with closeIcon correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" class="ToastViewport" data-expanded="true" data-slot="viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-reka-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="robotbas-toast-root row" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!-- <UAvatar v-if="avatar" :size="((props.ui?.avatarSize || ui.avatarSize()) as AvatarProps['size'])" v-bind="avatar"
        data-slot="avatar" :class="ui.avatar({ class: props.ui?.avatar })" /> -->
      <div class="col-2 text-center">
        <!--v-if-->
      </div>
      <div data-slot="wrapper" class="col-10 robotbas-toast-wrapper">
        <div data-slot="title" class="ToastTitle">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if-->
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-0%) !important;"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`Toast > renders with color primary correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" class="ToastViewport" data-expanded="true" data-slot="viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-reka-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="robotbas-toast-root row" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!-- <UAvatar v-if="avatar" :size="((props.ui?.avatarSize || ui.avatarSize()) as AvatarProps['size'])" v-bind="avatar"
        data-slot="avatar" :class="ui.avatar({ class: props.ui?.avatar })" /> -->
      <div class="col-2 text-center">
        <!--v-if-->
      </div>
      <div data-slot="wrapper" class="col-10 robotbas-toast-wrapper">
        <div data-slot="title" class="ToastTitle">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if-->
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-0%) !important;"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`Toast > renders with description correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" class="ToastViewport" data-expanded="true" data-slot="viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-reka-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="robotbas-toast-root row" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!-- <UAvatar v-if="avatar" :size="((props.ui?.avatarSize || ui.avatarSize()) as AvatarProps['size'])" v-bind="avatar"
        data-slot="avatar" :class="ui.avatar({ class: props.ui?.avatar })" /> -->
      <div class="col-2 text-center">
        <!--v-if-->
      </div>
      <div data-slot="wrapper" class="col-10 robotbas-toast-wrapper">
        <div data-slot="title" class="ToastTitle">Toast</div>
        <div data-slot="description" class="ToastDescription">This is a toast</div>
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if-->
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-0%) !important;"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`Toast > renders with description slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" class="ToastViewport" data-expanded="true" data-slot="viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-reka-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="robotbas-toast-root row" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!-- <UAvatar v-if="avatar" :size="((props.ui?.avatarSize || ui.avatarSize()) as AvatarProps['size'])" v-bind="avatar"
        data-slot="avatar" :class="ui.avatar({ class: props.ui?.avatar })" /> -->
      <div class="col-2 text-center">
        <!--v-if-->
      </div>
      <div data-slot="wrapper" class="col-10 robotbas-toast-wrapper">
        <div data-slot="title" class="ToastTitle">Toast</div>
        <div data-slot="description" class="ToastDescription">Description slot</div>
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if-->
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-0%) !important;"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`Toast > renders with icon correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" class="ToastViewport" data-expanded="true" data-slot="viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-reka-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="robotbas-toast-root row" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!-- <UAvatar v-if="avatar" :size="((props.ui?.avatarSize || ui.avatarSize()) as AvatarProps['size'])" v-bind="avatar"
        data-slot="avatar" :class="ui.avatar({ class: props.ui?.avatar })" /> -->
      <div class="col-2 text-center"><i class="i-lucide-rocket" data-slot="icon"></i></div>
      <div data-slot="wrapper" class="col-10 robotbas-toast-wrapper">
        <div data-slot="title" class="ToastTitle">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if-->
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-0%) !important;"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`Toast > renders with leading slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" class="ToastViewport" data-expanded="true" data-slot="viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-reka-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="robotbas-toast-root row" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">Leading slot<div data-slot="wrapper" class="col-10 robotbas-toast-wrapper">
        <div data-slot="title" class="ToastTitle">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if-->
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-0%) !important;"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`Toast > renders with orientation horizontal correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" class="ToastViewport" data-expanded="true" data-slot="viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-reka-collection-item="" tabindex="0" data-orientation="horizontal" data-slot="root" class="robotbas-toast-root row" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!-- <UAvatar v-if="avatar" :size="((props.ui?.avatarSize || ui.avatarSize()) as AvatarProps['size'])" v-bind="avatar"
        data-slot="avatar" :class="ui.avatar({ class: props.ui?.avatar })" /> -->
      <div class="col-2 text-center"><i class="i-lucide-rocket" data-slot="icon"></i></div>
      <div data-slot="wrapper" class="col-10 robotbas-toast-wrapper">
        <div data-slot="title" class="ToastTitle">Toast</div>
        <div data-slot="description" class="ToastDescription">This is a toast</div>
        <!--v-if-->
      </div>
      <div data-slot="actions" class=""><button class="robotbas-button" data-reka-toast-announce-exclude="" data-reka-toast-announce-alt="Action" type="button" size="xs">
          <!--v-if-->Action
          <!--v-if-->
        </button></div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-0%) !important;"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`Toast > renders with orientation vertical correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" class="ToastViewport" data-expanded="true" data-slot="viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-reka-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="robotbas-toast-root row" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!-- <UAvatar v-if="avatar" :size="((props.ui?.avatarSize || ui.avatarSize()) as AvatarProps['size'])" v-bind="avatar"
        data-slot="avatar" :class="ui.avatar({ class: props.ui?.avatar })" /> -->
      <div class="col-2 text-center"><i class="i-lucide-rocket" data-slot="icon"></i></div>
      <div data-slot="wrapper" class="col-10 robotbas-toast-wrapper">
        <div data-slot="title" class="ToastTitle">Toast</div>
        <div data-slot="description" class="ToastDescription">This is a toast</div>
        <div data-slot="actions" class=""><button class="robotbas-button" data-reka-toast-announce-exclude="" data-reka-toast-announce-alt="Action" type="button" size="xs">
            <!--v-if-->Action
            <!--v-if-->
          </button></div>
      </div>
      <div data-slot="actions" class="">
        <!--v-if-->
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-0%) !important;"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`Toast > renders with title correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" class="ToastViewport" data-expanded="true" data-slot="viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-reka-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="robotbas-toast-root row" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!-- <UAvatar v-if="avatar" :size="((props.ui?.avatarSize || ui.avatarSize()) as AvatarProps['size'])" v-bind="avatar"
        data-slot="avatar" :class="ui.avatar({ class: props.ui?.avatar })" /> -->
      <div class="col-2 text-center">
        <!--v-if-->
      </div>
      <div data-slot="wrapper" class="col-10 robotbas-toast-wrapper">
        <div data-slot="title" class="ToastTitle">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if-->
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-0%) !important;"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`Toast > renders with title slot correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" class="ToastViewport" data-expanded="true" data-slot="viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-reka-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="robotbas-toast-root row" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!-- <UAvatar v-if="avatar" :size="((props.ui?.avatarSize || ui.avatarSize()) as AvatarProps['size'])" v-bind="avatar"
        data-slot="avatar" :class="ui.avatar({ class: props.ui?.avatar })" /> -->
      <div class="col-2 text-center">
        <!--v-if-->
      </div>
      <div data-slot="wrapper" class="col-10 robotbas-toast-wrapper">
        <div data-slot="title" class="ToastTitle">Title slot</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if-->
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-0%) !important;"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`Toast > renders with type correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" class="ToastViewport" data-expanded="true" data-slot="viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-reka-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="robotbas-toast-root row" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!-- <UAvatar v-if="avatar" :size="((props.ui?.avatarSize || ui.avatarSize()) as AvatarProps['size'])" v-bind="avatar"
        data-slot="avatar" :class="ui.avatar({ class: props.ui?.avatar })" /> -->
      <div class="col-2 text-center">
        <!--v-if-->
      </div>
      <div data-slot="wrapper" class="col-10 robotbas-toast-wrapper">
        <div data-slot="title" class="ToastTitle">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if-->
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-0%) !important;"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`Toast > renders with ui correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" class="ToastViewport" data-expanded="true" data-slot="viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-reka-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!-- <UAvatar v-if="avatar" :size="((props.ui?.avatarSize || ui.avatarSize()) as AvatarProps['size'])" v-bind="avatar"
        data-slot="avatar" :class="ui.avatar({ class: props.ui?.avatar })" /> -->
      <div class="">
        <!--v-if-->
      </div>
      <div data-slot="wrapper" class="">
        <div data-slot="title" class="font-bold">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <div data-slot="actions" class="">
        <!--v-if-->
      </div>
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-0%) !important;"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;

exports[`Toast > renders without close correctly 1`] = `
"<!--v-if-->
<!--teleport start-->
<!--teleport end-->
<!--teleport start-->


<div role="region" aria-label="Notifications (F8)" tabindex="-1"><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
  <ol tabindex="-1" class="ToastViewport" data-expanded="true" data-slot="viewport" style="--scale-factor: 0.05; --translate-factor: -1px; --gap: -16px; --front-height: 0px; --height: 0px;">
    <li data-reka-collection-item="" tabindex="0" data-orientation="vertical" data-slot="root" class="robotbas-toast-root row" style="--height: 0; user-select: none; touch-action: none;" data-state="open" data-swipe-direction="right">
      <!-- <UAvatar v-if="avatar" :size="((props.ui?.avatarSize || ui.avatarSize()) as AvatarProps['size'])" v-bind="avatar"
        data-slot="avatar" :class="ui.avatar({ class: props.ui?.avatar })" /> -->
      <div class="col-2 text-center">
        <!--v-if-->
      </div>
      <div data-slot="wrapper" class="col-10 robotbas-toast-wrapper">
        <div data-slot="title" class="ToastTitle">Toast</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <div data-orientation="horizontal" data-slot="progress" class="">
        <!--v-if-->
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" aria-label="100%" role="progressbar" data-state="complete" data-value="100" data-max="100" data-slot="base" class="ProgressRoot" style="transform: translateZ(0);">
          <div data-state="complete" data-value="100" data-max="100" data-slot="indicator" class="ProgressIndicator" style="transform: translateX(-0%) !important;"></div>
        </div>
        <!--v-if-->
      </div>
    </li>
  </ol><span aria-hidden="true" tabindex="0" style="position: fixed; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"></span>
</div>


<!--teleport end-->"
`;
